# skyrim-rich-presence

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
